# SeRVe-Client

./: .env.example  .gitignore  Dockerfile  Dockerfile.edge  README.md  README2.md  Readme  SYNC_ANALYSIS.md  app.py  clip_embeddings.py  config.py  docker-compose-edge-test.yml  docker-compose.yml  main.py  mock_server.py  nginx.conf  pyproject.toml  requirements.txt  robot_simulator.py  serve_connector.py  setup.py  setup_edge_account.py  supervisord.conf  test_data_api.py  test_npz_workflow.py  vision_engine.py
claude_guide/: SERVER_CONNECTION_GUIDE.md
docs/: ALB_TESTING.md  DATA.md  MOCK_SERVER.md  PREPROCESS.md  README.md  S3_DOWNLOAD.md
old/: serve_connector.py
security/: crypto_manager.py
serve_sdk/: api_client.py  artifact_storage.py  client.py  local_db.py  qdrant_db.py  session.py
servis/: README.md
servis/cli/: auth_commands.py  main.py  repo_commands.py
servis/core/: config.py
servis/serve_sdk/: client.py
src/: .app.py.local.backup  app.py  clip_embeddings.py  config.py  config.py.example  image_utils.py  main.py  ollama_embeddings.py  requirements.txt  vision_engine.py
src/cli/: auth.py  (+15 more)
suricata/: custom.rules  suricata.yaml
test/: test_auth.py  test_docker_multicontainer.py  test_document.py  test_download.py  test_download_simple.py  test_federated_upload.py  test_integration.py  test_key_rotation.py  test_main.py  test_member.py  test_multimodal_rag.py  test_multiprocess_simulation.py  test_repository.py  test_robot_simulator.py  test_sync.py  test_sync_demo.py  test_team_isolation_debug.py  test_vision_rag.py  test_workflow.py
(+1 files in other folders)
